@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.167 2010-09-22 09:30:24 mg Exp $
+# $Id: CHANGES,v 1.993.2.168 2010-09-29 05:58:20 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.9 (2010/??/??)
+ - 2010-09-29 Fixed bug#6030 - Event notifications get's fired several times on
+    event "TicketFreeTextUpdate".
  - 2010-09-22 Fixed bug#5941 - Error in Apache log when no tickets and/or customers in dashboard.
  - 2010-09-14 Fixed bug#5541 - Dashboard Chart generates error in webserver log.
  - 2010-09-09 Fixed bug#5462 - Kernel::System::Ticket::TicketEscalationIndexBuild()
